<resources>
    <string name="app_name">Charades</string>
    <string name="action_show_all_items">Show all items</string>
    <string name="action_sync_online_categories">Sync online categories</string>
    <string name="action_settings">Settings</string>
    <string name="language_title">English</string>
    <string name="categories">Categories</string>
    <string name="closing_activity">Closing Activity</string>
    <string name="close_activity_confirmation">Are you sure you want to close this activity?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="search_hint">Search categories</string>

    <string name="open_menu">Open menu</string>
    <string name="close_menu">Close menu</string>
    <string name="main_categories">Main Categories</string>
    <string name="favorites">Favorites</string>
    <string name="hidden">Hidden</string>

    <string name="title_activity_game_round">GameRoundActivity</string>
    <string name="get_ready">Get ready</string>
    <string name="play_again">Play again</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="play">Play</string>
    <string name="edit">Edit</string>
    <string name="favorite">Favorite</string>
    <string name="unhide">Unhide</string>
    <string name="hide">Hide</string>
    <string name="remove">Remove</string>
    <string name="timer">Timer</string>
    <string name="name">Name</string>
    <string name="category_name">Category Name</string>
    <string name="item_name">Item Name</string>
    <string name="select_picture">Select Picture</string>
    <string name="how_to_play">How to Play</string>

    <string name="how_to_play_1">Choose a category and place the phone on your forehead.</string>
    <string name="how_to_play_2">Guess what\'s written based on what your friends are doing.</string>
    <string name="how_to_play_3">Tilt up if you get it right, tilt down to skip.</string>
    <string name="how_to_play_4">Try to get as many right answers as possible before the timer runs out.</string>

    <string name="syncing_online_categories">Syncing online categories...</string>
    <string name="online_categories_not_available">Online categories not available.</string>
    <string name="error_loading_online_data">Error while loading online data.</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_manage_category">Category</string>
    <string name="action_save">Save</string>
    <string name="add_new_item">+ New Item</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_select_round_time">Round time</string>
    <string name="pref_key_round_time">pref_round_time</string>
    <string-array name="pref_round_time_list_titles">
        <item>00:10</item>
        <item>00:30</item>
        <item>01:00</item>
        <item>01:30</item>
        <item>02:00</item>
    </string-array>
    <string-array name="pref_round_time_list_values">
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>
    <string name="pref_title_select_language">Language</string>
    <string name="pref_key_language">pref_language</string>
    <string-array name="pref_language_list_titles">
        <item>English</item>
        <item>Português (Brasil)</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>en_US</item>
        <item>pt_BR</item>
    </string-array>

    <!-- Transitions -->
    <string name="transition_manage_category">TRANSITION_MANAGE_CATEGORY</string>
    <string name="transition_category_name">TRANSITION_CATEGORY_NAME</string>
    <string name="transition_category_image">TRANSITION_CATEGORY_IMAGE</string>
</resources>
