<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_categories"
        android:checkableBehavior="single">

        <item
            android:id="@+id/item_main_categories"
            android:checked="true"
            android:icon="@drawable/ic_class_black_24dp"
            android:title="@string/main_categories"
            />

        <item
            android:id="@+id/item_favorites"
            android:checked="false"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorites"
            />

        <item
            android:id="@+id/item_hidden"
            android:checked="false"
            android:icon="@drawable/ic_visibility_off_black_24dp"
            android:title="@string/hidden"
            />

    </group>

    <group android:id="@+id/group_secondary">

        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"
            />

        <item
            android:id="@+id/item_how_to_play"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/how_to_play"
            />

    </group>
</menu>