<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.pongo.charades.activities.GameRoundActivity">

    <TextView
        android:id="@+id/top_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/timer"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/main_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/get_ready"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/back_button"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            style="@style/Widget.AppCompat.Button.Colored">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="&#xf112;"
                android:id="@+id/back_icon"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back"
                android:id="@+id/back_button_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/skip_button"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            style="@style/Widget.AppCompat.Button.Colored">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="&#xf064;"
                android:id="@+id/skip_icon"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:id="@+id/skip_button_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/replay_button"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            style="@style/Widget.AppCompat.Button.Colored">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="&#xf144;"
                android:id="@+id/replay_icon"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Replay"
                android:id="@+id/replay_button_text" />
        </LinearLayout>

    </FrameLayout>

</FrameLayout>
